Bug 1285857 - Switch to SKIA from D2D1 when rendering mask image with luminance mode. r=mstange